# gw-school-2026-materials

./: pyproject.toml
Week_1/Day_1/Tutorials/: test.ipynb
Week_1/Day_2/Tutorials/: timing_1_PINT_JUG_shapiro.ipynb  timing_2_noise_gaussianity.ipynb
Week_1/Day_3/Tutorials/: holodeck_viper_tutorial.ipynb
Week_1/Day_4/Tutorials/: KAG_VSS26_DIYMCMC.ipynb
Week_1/Day_5/Tutorials/: KAG_VSS26_OptimalStatistic.ipynb
